84) Disable hotplug before update firmware.<br>
85) Samba2/3 merge the smbd and nmbd binaries. The binary generated is called "smbd", while "nmbd" becomes a symlink(decrease duplicate code).<br>
86) Fix auth type select in VPN.<br>
87) More correct reload ppp modules for 16Mb devices (Try fix PPE issue).<br>
88) No nedd remove ppp modules for 32Mb devices (Try fix PPE issue).<br>

<br>
<b>1.10.x</b><br>
1) Update busybox to 1.19.2.<br>
2) Update libevent to 2.0.13 version.<br>
3) Add support exec external scripts on wpn button pressed or hold (/etc/scripts/OnPressWPS.button and OnHoldWPS.button scripts. And WPSHlprmode variable).<br>
4) Update Uboot to 3.6.0.0 sdk version.<br>
5) Some kernel fixes backport from 3.5.2.0 sdk.<br>
6) Hotplug now support print server.<br>
7) Update Ralink Hardware NAT to v0.92 3.6.0.0 sdk.<br>
8) Add spi workaround from 3.6.0.0 sdk.<br>
9) Fix boot device detect for RT6855.<br>
10) Update gdma driver form 3.6.0.0 sdk.<br>
11) Backport SPI driver from 3.6.0.0. New flash support.<br>
12) Backport rdm driver from 3.6.0.0 SDK.<br>
13) Fix RT6855 support in serial drivers.<br>
14) dwc_otg driver up to 3.6.0.0 sdk version.<br>
15) usb gadget up to 3.6.0.0 sdk version.<br>
16) ehci driver up to 3.6.0.0 sdk.<br>
17) Add mobilepack support to usb option.<br>
18) gdma and i2c drivers up.<br>
19) update pcm and i2s drivers up from 3.6.0.0 sdk.<br>
20) watchdog drivers up to 3.6.0.0 SDK.<br>
21) 8021q ralink tso support.<br>
22) Prevent IGMP report packet flooding to all NICs.<br>
23) Usb suspend at start need for power save.<br>
24) Fix build with 3.82 make version.<br>
25) Backport raeth driver from 3.6.0.0SDK (v2.1).<br>
26) Update sta driver to 2.4.0.4.<br>
27) Update ap driver to 2.5.0.4.<br>
28) Add /proc/rt3052/esw_cnt for traffic statistic per switch port.(need add in WebUI).<br>
29) Support Ralink RT3883+RT5392 referenece board.<br>
30) Fix mips 24kec "Wrong EPC on Exceptional J/JAL Targets" issue.<br>