@@ -1381,6 +1381,7 @@ CONFIG_RA_NETWORK_TASKLET_BH=y
 # CONFIG_RAETH_SKB_RECYCLE_2K is not set
 # CONFIG_RAETH_SPECIAL_TAG is not set
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
+CONFIG_RAETH_HW_VLAN_TX=y
 # CONFIG_GE1_MII_FORCE_100 is not set
 # CONFIG_GE1_MII_AN is not set
 # CONFIG_GE1_RVMII_FORCE_100 is not set
